# trip-planner-assistant

./: README.md  pyproject.toml  report.md
src/trip_planner_assistant/: crew.py  main.py  tools.py
src/trip_planner_assistant/config/: agents.yaml  tasks.yaml
